--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
     "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.3",
     "dotenv": "^16.4.5",
+    "handlebars": "^4.7.8",
     "htmx": "^0.0.2",
     "mongodb": "6.8"
   },
