--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "htmx": "^0.0.2",
-    "mongodb": "6.8"
+    "mongodb": "6.8",
+    "podcast": "^2.0.1",
+    "translitit-cyrillic-ukrainian-to-latin": "^0.1.0",
+    "minio": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
