--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
+    "start": "node src/app.js",
     "build:css": "tailwindcss -i ./src/styles.css -o ./src/public/styles.css --watch"
   },
   "keywords": [],
