--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "minio": "^8.0.0",
     "mongodb": "6.8",
     "podcast": "^2.0.1",
+    "slugify": "^1.6.6",
     "translitit-cyrillic-ukrainian-to-latin": "^0.1.0"
   },
   "devDependencies": {
