--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.645.0",
+    "@aws-sdk/lib-storage": "^3.705.0",
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.10",
     "@hapi/inert": "^7.1.0",
@@ -21,13 +22,16 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
+    "googleapis": "^73.0.0",
     "handlebars": "^4.7.8",
     "htmx": "^0.0.2",
     "minio": "^8.0.0",
     "mongodb": "6.8",
+    "path": "^0.12.7",
     "podcast": "^2.0.1",
     "slugify": "^1.6.6",
-    "translitit-cyrillic-ukrainian-to-latin": "^0.1.0"
+    "translitit-cyrillic-ukrainian-to-latin": "^0.1.0",
+    "ytdl-core": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
