--- a/package.json
+++ b/package.json
@@ -15,25 +15,24 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.645.0",
     "@aws-sdk/lib-storage": "^3.705.0",
+    "@distube/ytdl-core": "^4.15.1",
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.10",
     "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
+    "@pulsecron/pulse": "^1.6.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
-    "ffmpeg-static": "^5.2.0",
     "googleapis": "^73.0.0",
     "handlebars": "^4.7.8",
     "htmx": "^0.0.2",
-    "minio": "^8.0.0",
     "mongodb": "6.8",
     "path": "^0.12.7",
     "podcast": "^2.0.1",
-    "slugify": "^1.6.6",
-    "translitit-cyrillic-ukrainian-to-latin": "^0.1.0",
-    "ytdl-core": "^4.5.0"
+    "standard-slugify": "^4.0.0"
   },
   "devDependencies": {
+    "@types/agenda": "^3.0.2",
     "nodemon": "^3.1.4",
     "tailwindcss": "^3.4.6"
   }
